# pysch-beta

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-test-pypi.yml  python-package.yml
pysc/: commands.py  config.py  connection.py  inventory.py  log_config.py  pysc.py
pysch/: cli.py  common.py  config.py  config.yaml  connection.py  interactive.py  inventory.py  log_config.py  logging.yaml  pysc.py  pysch_cli.py
tests/: test_cli.py
